add TSDBStore and bump OS version (#61)
* add TSDBStore and bump OS version

Signed-off-by: xuxiong1 <xiongxug@outlook.com>

* add license

Signed-off-by: xuxiong1 <xiongxug@outlook.com>

* fix forbiddenApisMain

Signed-off-by: xuxiong1 <xiongxug@outlook.com>

* update sha1

Signed-off-by: xuxiong1 <xiongxug@outlook.com>

* update sha1

Signed-off-by: xuxiong1 <xiongxug@outlook.com>

---------

Signed-off-by: xuxiong1 <xiongxug@outlook.com>