@@ -9,6 +9,8 @@ package org.opensearch.tsdb.lang.m3.m3ql.parser.nodes;
 
 import org.opensearch.tsdb.lang.m3.m3ql.parser.M3ASTVisitor;
 
+import java.util.Locale;
+
 /**
  * Any value occurring in the M3 query language. This may represent a function argument, or it may
  * refer to a tag value in a fetch/using expression.
@@ -39,6 +41,6 @@ public class ValueNode extends M3ASTNode {
 
     @Override
     public String getExplainName() {
-        return "VALUE(%s)".formatted(value);
+        return String.format(Locale.ROOT, "VALUE(%s)", value);
     }
 }
